--- a/web/css/style.css
+++ b/web/css/style.css
@@ -629,3 +629,13 @@ A:active {
     float: right;
     line-height: 2em;
 }
+
+#ajaxBusy{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -24px;
+    margin-left: -24px;
+    z-index: 100;
+    display: none;
+}
