--- a/web/css/missingissue/missingissue.css
+++ b/web/css/missingissue/missingissue.css
@@ -33,12 +33,12 @@ root {
 
 #gMiBtnDiv{
     float: left;
-    width: 20%;
+    width: 15%;
 }
 
 #reprintBtnDiv{
     float: left;
-    width: 20%;
+    width: 15%;
 }
 
 #noCopyBtnDiv{
@@ -49,4 +49,16 @@ root {
 #sentMsgBtnDiv{
     float: left;
     width: 15%;
+}
+
+#replyOptionDiv{
+    margin-left: 20%;
+    float: left;
+    width: 30%;
+}   
+
+#mlOptionDiv{
+    margin-left: 20%;
+    float: left;
+    width: 30%;
 }
