--- a/web/css/style.css
+++ b/web/css/style.css
@@ -531,7 +531,8 @@ A:active {
     margin: 0 auto;
     width: 100%;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 5px;
+    font-size: 16px;
 }
 
 #letterDiv{
