--- a/trunk/web/js/plupload/jquery.ui.plupload/css/jquery.ui.plupload.css
+++ b/trunk/web/js/plupload/jquery.ui.plupload/css/jquery.ui.plupload.css
@@ -20,17 +20,18 @@ div.plupload div.plupload_header {border-width: 0 0 1px 0; position: relative;}
 }
 
 .plupload_header_content {
-	background-image: url('../img/plupload.png');
+	/*background-image: url('../img/plupload.png');
 	background-repeat: no-repeat;
-	background-position: 8px center;
-	min-height: 56px;
-	padding-left: 60px;
+	background-position: 8px center;*/
+	min-height: 20px;
+	padding-left: 10px;
 	position:relative;
 }
 .plupload_header_content_bw {background-image: url('../img/plupload-bw.png');}
 .plupload_header_title {
 	font: normal 18px sans-serif;
 	padding: 6px 0 3px;
+        display: none;
 }
 .plupload_header_text {font: normal 12px sans-serif;}
 
