--- a/web/css/invoice/invoice.css
+++ b/web/css/invoice/invoice.css
@@ -45,7 +45,7 @@ root {
     text-align: left;
     float: left;
     margin-left: 10%;
-    margin-top: 20px;
+    margin-top: 10px;
 
 }
 
@@ -55,13 +55,13 @@ root {
     text-align: left;
     padding-left: 20%;
     float: right;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .invoceAddressHeaderDiv{
     width: 100%;
     float: left;
-    margin-top: 10px;
+    margin-top: 2px;
 }
 
 .invoiceSubscriberAddressHeaderSpan{
@@ -70,16 +70,17 @@ root {
     text-align: left;
 }
 
+
 .invoiceSubscriberAddressSpan{
    width: 30%;
-   text-transform: uppercase;
+   /*text-transform: uppercase;*/
    text-align: left;
-   line-height: 1.8em;
+   line-height: 1.2em;
 }
 
 .invoceAddressDiv{
     width: 100%;
-    margin-top: 10px;
+    margin-top: 2px;
     text-align: center;
     /*float: left;*/
 
@@ -148,8 +149,8 @@ root {
 
 #invoceHeaderDiv{
     width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 
