--- a/web/css/style.css
+++ b/web/css/style.css
@@ -590,10 +590,11 @@ A:active {
     border-left-width: 1px;
     border-bottom-width: 1px;
     border-top-width: 1px;
-    margin: 20px 20px;
+    margin: 10px 10px;
     height: auto;
     float: left;
     display: block;
+    width: 98%;
 }
 
 #letterDate{
