--- a/web/css/subscription.css
+++ b/web/css/subscription.css
@@ -1,22 +1,5 @@
-/*
-    Document   : subscription
-    Created on : Nov 12, 2011, 4:39:26 PM
-    Author     : I036897
-    Description:
-        Purpose of the stylesheet follows.
-*/
-
-/*
-   TODO customize this sample style
-   Syntax recommendation http://www.w3.org/TR/REC-CSS2/
-*/
-
 root {
     display: block;
-}
-
-#btnDeleteLine{
-
 }
 
 #addJournalBtnDiv{
@@ -39,7 +22,17 @@ root {
     text-align: right;
 }
 
+#journalName{
+    width: 500px;
+}
+
 #journalGroupContents{
     float: left;
     width: 100%;
+}
+
+#SubscriptionRightDiv{
+    width: 49%;
+    float: right;
+    padding: 5px;
 }
