--- a/trunk/web/menu/css/skins/grey.css
+++ b/trunk/web/menu/css/skins/grey.css
@@ -4,8 +4,8 @@
 .grey .accordion ul{
     padding: 0px;
 }
-.grey .accordion .menu a {padding: 8px 8px 8px 50px; background: #ececec; text-decoration:none; display: block; color: #333; border-bottom: 1px solid #ccc; border-top: 1px solid #fff; position: relative; text-shadow: 1px 1px 1px #fff;}
-.grey .accordion .menu .menuitem a {padding: 8px 8px 8px 10px; background: #ececec; text-decoration:none; display: block; color: #333; border-bottom: 1px solid #ccc; border-top: 1px solid #fff; position: relative; text-shadow: 1px 1px 1px #fff;}
+.grey .accordion .menu a {padding: 5px 5px 5px 50px; background: #ececec; text-decoration:none; display: block; color: #333; border-bottom: 1px solid #ccc; border-top: 1px solid #fff; position: relative; text-shadow: 1px 1px 1px #fff;}
+.grey .accordion .menu .menuitem a { font: bold 11px Arial, sans-serif; padding: 5px; background: #ececec; text-decoration:none; display: block; color: #333; border-bottom: 1px solid #ccc; border-top: 1px solid #fff; position: relative; text-shadow: 1px 1px 1px #fff;}
 .grey .accordion a.dcjq-parent, .grey .accordion a.dcjq-parent:hover {background: #D7D4D4 url(images/bg_grey.png) repeat-x 0 -1px;}
 .grey .accordion a.dcjq-parent.active {color: #990000;}
 .grey .accordion a .dcjq-icon {position: absolute; top: 50%; left: 14px; width: 34px; margin-top: -17px; height: 34px; background: url(images/arrow_grey_right.png) no-repeat 0 center;}
